# 5barparallel

./: .gitattributes  .gitignore  CLAUDE.md  Claude.md  README.md  bung cover 5bar robot.tar  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
cad/: BOM.md  README.md  drawings.py  generate.py  params.py
cad/step/: bearing_cap.step  distal_arm.step  dual_base_full.step  motor_carriage.step  motor_cradle_L.step  motor_cradle_R.step  proximal_arm.step  shoulder_shaft.step
config/: camera_config.yaml  recipes.yaml  robot_config.yaml
docs/: Bung_Cover_Controller_Tags.CSV  control_pc_setup.md  deploy.md  ethercat_bringup.md  home_offset_calibration.md  homing.md  plc_homing.md  plc_ladder.md  plc_program.md  plc_setup.md  plc_tag_values.md
docs/l5x/: 1_VisionRobot_Cmd.L5X  2_VisionRobot_Target.L5X  3_VisionRobot_Manual.L5X  4_VisionRobot_Status.L5X  5_VisionRobot.L5X  AOI_AxisMove.L5X  AOI_HomeAxis.L5X  R00_Main.L5X  (+13 more)
esi/: STEPPERONLINE_A6_Servo_V0.02.xml
igh/: Makefile  README.md  ec_master_daemon.c  igh_test.c
scripts/: ec_bench.py  ec_crc.py  ec_dc_probe.py  ec_inspect.py  install.sh  render_plc_l5x.py  render_plc_ladders.py
tests/: test_app_settings.py  test_calibration.py  test_camera.py  test_cia402.py  test_cycle.py  test_detection.py  test_driver.py  test_ec_crc.py  test_ethercat_driver.py  test_ethercat_master.py  test_ethercat_params.py  test_gui_smoke.py  test_home_offset.py  test_igh_master.py  test_inertia.py  test_kinematics.py  test_main.py  test_plc.py  test_plc_constants.py  test_recipes.py  test_robot_test_controller.py  test_trajectory.py  test_tuning.py  test_workarea.py
(+54 files in other folders)
