[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bung-cover-robot"
version = "0.1.0"
description = "Vision-guided 5-bar parallel-SCARA bung-cover pick-and-place robot control"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Installed as they're needed by the to-build layers (Claude.md §14).
# opencv is used for frame save/convert/processing; pypylon drives the Basler.
vision = ["opencv-python>=4.8", "pypylon>=3.0"]
plc = ["pycomm3>=1.2"]
gui = ["PySide6>=6.6"]
dev = ["pytest>=7.0", "opencv-python-headless>=4.8", "PySide6>=6.6"]

[project.scripts]
bung-cover-robot = "bung_cover_robot.main:main"
bung-cover-gui = "bung_cover_robot.gui.app:run_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
